...
            android:layout_height="wrap_content"
            android:background="#ebebeb"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/searchBar"
                style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="Search"
...
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:entries="@array/searchOptions" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@android:drawable/ic_menu_search" />

        </LinearLayout>

        <Button
            android:id="@+id/preset1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/tag1"
            android:backgroundTint="@color/yellow_200"
...
                        android:text="Search"
                        android:backgroundTint="@color/purple_200"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/item1text"
                    android:text="item 1"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:id="@+id/item1button"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/item1username"
                        android:text="item 1 username"
                        android:textSize="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_width="180dp"
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="20dp"
                        android:gravity="right"
                        android:text="100"/>
                    <ImageButton
                        android:id="@+id/item1like"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_thumbsup"
                        android:backgroundTint="@color/yellow_200"/>
                    <TextView
                        android:id="@+id/numDislikes1"
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="20dp"
                        android:gravity="right"
                        android:text="100"/>
                    <ImageButton
                        android:id="@+id/item1dislike"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_thumbsdown"
                        android:backgroundTint="@color/yellow_200"/>
                </LinearLayout>
                <Button
...
