<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/account"
        android:icon="@drawable/ic_account"
        android:title="My Account"/>
    <item android:id="@+id/navviewliked"
        android:icon="@drawable/ic_thumbsup"
        android:title="View Liked Videos"/>
    <item android:id="@+id/navviewdisliked"
        android:icon="@drawable/ic_thumbsdown"
        android:title="View Disliked Videos"/>
    <item android:id="@+id/navviewwatched"
        android:icon="@drawable/ic_videocam"
        android:title="View Watched Videos"/>
    <item android:id="@+id/navviewuploaded"
        android:icon="@drawable/ic_upload"
        android:title="View Uploaded Videos"/>

</menu>