...
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/publicProfileUsername"
                                android:layout_width="140dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="0dp"
                                android:layout_marginLeft="0dp"
                                android:textColor="@color/white"
                                android:textSize="15dp"
...
