...
                        android:layout_marginTop="5dp"
                        android:text="Title: "
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/livestream_title"
                        android:layout_width="250sp"
                        android:layout_height="40sp"
                        android:layout_marginTop="5dp"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </LinearLayout>
...
                        android:text="Max # of people: "
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <EditText
                        android:id="@+id/livestream_num_people"
                        android:layout_width="150sp"
                        android:layout_height="40sp"
                        android:ems="10"
                        android:inputType="number"
                        app:layout_constraintHorizontal_bias="0.475" />
                </LinearLayout>
...
                        android:inputType="textPersonName"
                        android:text="End time:"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/endTime"
                        android:layout_width="220sp"
                        android:layout_height="40sp"
                        android:ems="10"
                        android:inputType="time" />
                </LinearLayout>

...
                        android:layout_marginLeft="20dp"
                        android:text="Zoom link:"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/zoom"
                        android:layout_width="220dp"
                        android:layout_height="40dp"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </LinearLayout>

...
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="Select Thumbnail Image"
                        android:textSize="14dp"
                        app:backgroundTint="#7A8EFF"
                        app:layout_constraintBottom_toTopOf="@+id/save_button" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayoutCenter2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/titleInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter Title Here..." />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
...
                    android:layout_marginLeft="20dp"
                    android:text="(optional) Length of Video"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextTime2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="min:sec"
                    android:inputType="time"
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/uploadVideoButton"
                        android:layout_width="310dp"
                        android:layout_height="43dp"
                        android:text="Upload"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="parent"
...
